2020-02-12  Akira Kakuto  <kakuto@w32tex.org>

	* dvipdfmx.c: Fix a potential bug in set_default_pdf_filename().
	see https://tug.org/pipermail/tex-live/2020-February/044731.html

2020-02-06  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfobj.c: In pdf_new_string(), the supplied string was
	checked and dvipdfmx aborted when it was NULL. This check
	is removed since it is actually not necessary. The string is
	regarded simply as an empty string if it is NULL from now on.
	See https://tex.stackexchange.com/questions/522794/problem-in-updated-tex-live,
	although we can't reproduce the problem.
	* spc_pdfm.c: Add two pdftex specials which are basically
	similar to the existing dvipdfmx special "pdf:literal",
	"pdf:page:" and "pdf:direct:". It is not possible to test
	properly since exact spec is unknown to us. Currently,
	"pdf:direct:" is just an alias of "pdf:page:". It cannot be
	properly implemented at present.

2020-01-24  Akira Kakuto  <kakuto@w32tex.org>

	* dvi.c: Forgot to null-terminate strings in the previous
	changes.

2020-01-22  Akira Kakuto  <kakuto@w32tex.org>

	* dvi.c: Correct wrong sizes of opassword and upassword
	in scan_special_encrypt().

2020-01-16  Karl Berry  <karl@freefriends.org>

	* xbb.c (show_version),
	* dvipdfmx.c (show_version): copyright 2020.
	* configure.ac: version 20200116 for TL'20.

2019-11-14  Akira Kakuto  <kakuto@w32tex.org>

	* mt19937ar.c: Add to support common font names in all
	platforms when SOURCE_DATE_EPOCH is suitably set. A pseudo
	random number generating program coded by Takuji Nishimura and
	Makoto Matsumoto.
	* README: Add a subject "11. Random number generating function".
	* mem.h: Add "#define srand(x) init_genrand((x))", etc. because
	it is the only common header file for dpxcrypt.c, pdfencrypt.c,
	and pdffont.c, which use rand().
	* Makefile.am: Add mt19937ar.c.
	* configure.ac: Version 20191114.

2019-11-13  Akira Kakuto  <kakuto@w32tex.org>

	* spc_dvips.c: Add -dDELAYSAFER in GS_CALCULATOR because