@@ -1,3 +1,7 @@
+2020-02-29  Akira Kakuto  <kakuto@w32tex.org>
+
+	Add pdftoepdf-poppler0.86.0.cc to support system poppler 0.86.0.
+
 2019-12-30  Akira Kakuto  <kakuto@w32tex.org>
 
 	* utils.c: Not include poppler-config.h, by assuming that
